infrastructure/observability/base/ingress/ingress-prometheus.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.${BASE_DOMAIN}`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-tls
  annotations:
    dashboard.zippelf.com/scrape: "true"
    dashboard.zippelf.com/logo: "https://avatars1.githubusercontent.com/u/3380462?s=200&v=4"
    dashboard.zippelf.com/display-name: "Prometheus"
    dashboard.zippelf.com/docs: "https://prometheus.io/docs/prometheus/latest/"
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-prometheus-ingress
  routes:
    - match: Host(`prometheus.${BASE_DOMAIN}`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
      middlewares:
        - name: ak-outpost-prometheus
          namespace: authentik
    - match: Host(`prometheus.${BASE_DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      services:
        - name: ak-outpost-prometheus
          port: 9000
          namespace: authentik
